# images-thief

./: .babelrc  .gitignore  .releaserc.json  README.md  cache.json  composer.json  download.php  eslint.config.mjs  getApiImages.php  index.html  jsconfig.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.electron-vue/: build.js  webpack.main.config.js  webpack.renderer.config.js
.github/workflows/: release.yml
.tauri/: myapp.key  myapp.key.pub  password.key
scripts/: sync-versions.js
src/: App.vue  index.ejs  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: download_manager.rs  lib.rs  main.rs  storage.rs  types.rs  util.rs
src-tauri/src/util/: mod.rs  request.rs  util.rs
src/components/: BatchActions.vue  ContextMenu.vue  SearchFilter.vue  StatsPanel.vue  Toast.vue  UpdateModal.vue
src/composables/: useStorage.ts
src/main/: index.dev.js  index.js
src/renderer/: App.vue  main.js
src/types/: index.ts
src/util/: exportToCsv.js
src/utils/: downloadStatus.ts
