[package]
name = "images-thief"
version = "3.1.0"
description = "images-thief"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
tauri = { version = "1.0.8", features = ["api-all"] }
tokio = { version = "1.23.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["stream"] }
url = "2.3.1"
futures-util = "0.3.25"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
